--- a/BitoDesktop.WPF/Pages/Settings/PrinterInfo.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/PrinterInfo.xaml
@@ -7,18 +7,59 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
     Title="PrinterInfo"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    MinWidth="800"
+    MinHeight="450"
     mc:Ignorable="d">
 
     <Page.Resources>
-        <Style x:Key="CustomBorder" TargetType="Border">
+        <Style TargetType="Border">
             <Setter Property="Background" Value="White" />
             <Setter Property="Margin" Value="10" />
             <Setter Property="CornerRadius" Value="10" />
         </Style>
+        <Style BasedOn="{StaticResource MaterialDesignRaisedButton}" TargetType="Button">
+            <Setter Property="Width" Value="140" />
+            <Setter Property="Height" Value="48" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="md:ButtonAssist.CornerRadius" Value="10" />
+            <Setter Property="Background" Value="#006AFF" />
+            <Setter Property="Margin" Value="7" />
+        </Style>
+        <Style BasedOn="{StaticResource MaterialDesignOutlinedTextBox}" TargetType="TextBox">
+            <Setter Property="Width" Value="320" />
+            <Setter Property="Height" Value="56" />
+            <Setter Property="Margin" Value="10,5" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="md:TextFieldAssist.TextFieldCornerRadius" Value="13" />
+            <Setter Property="Background" Value="#F5F5F5" />
+            <Setter Property="FontSize" Value="15" />
+            <Setter Property="FontWeight" Value="DemiBold" />
+            <Setter Property="FontWeight" Value="DemiBold" />
+        </Style>
+        <Style BasedOn="{StaticResource MaterialDesignOutlinedComboBox}" TargetType="ComboBox">
+            <Setter Property="Width" Value="320" />
+            <Setter Property="Height" Value="56" />
+            <Setter Property="Margin" Value="10,5" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="md:TextFieldAssist.TextFieldCornerRadius" Value="13" />
+            <Setter Property="Background" Value="#F5F5F5" />
+            <Setter Property="FontSize" Value="15" />
+            <Setter Property="FontWeight" Value="DemiBold" />
+            <Setter Property="FontWeight" Value="DemiBold" />
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="FontSize" Value="15" />
+            <Setter Property="FontWeight" Value="DemiBold" />
+        </Style>
+        <Style BasedOn="{StaticResource MaterialDesignSwitchLightToggleButton}" TargetType="ToggleButton">
+            <Setter Property="Margin" Value="300,0" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="md:ToggleButtonAssist.SwitchTrackOnBackground" Value="#006AFF" />
+            <Setter Property="ToolTip" Value="Mat" />
+        </Style>
     </Page.Resources>
-    <Border Style="{StaticResource CustomBorder}">
+    <Border>
         <StackPanel>
             <Grid>
                 <Button
@@ -26,9 +67,7 @@
                     Height="48"
                     Margin="10"
                     HorizontalAlignment="Left"
-                    md:ButtonAssist.CornerRadius="10"
                     Background="#F5F5F5"
-                    BorderThickness="0"
                     Content="Ortga"
                     Foreground="Black" />
 
@@ -37,120 +76,33 @@
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     FontSize="20"
-                    FontWeight="DemiBold"
                     Text="Yangi printer" />
-
-                <Button
-                    Width="140"
-                    Height="48"
-                    Margin="0,10,10,0"
-                    HorizontalAlignment="Right"
-                    md:ButtonAssist.CornerRadius="10"
-                    Background="#006AFF"
-                    Content="Saqlash" />
-
-                <Button
-                    Width="140"
-                    Height="48"
-                    Margin="10,10,170,0"
-                    HorizontalAlignment="Right"
-                    md:ButtonAssist.CornerRadius="10"
-                    Background="#006AFF"
-                    Content="Test print +" />
-                <Button
-                    Width="140"
-                    Height="48"
-                    Margin="10,10,330,0"
-                    HorizontalAlignment="Right"
-                    md:ButtonAssist.CornerRadius="10"
-                    Background="#EC5B56"
-                    Content="O'chirish"/>
+                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                    <Button Content="Saqlash" />
+                    <Button Content="Test print +" />
+                    <Button Background="#EC5B56" Content="O'chirish" />
+                </StackPanel>
             </Grid>
-            <TextBox
-                Width="320"
-                Height="56"
-                Margin="10,5"
-                Padding="10"
-                HorizontalAlignment="Left"
-                VerticalContentAlignment="Center"
-                md:HintAssist.Hint="Nomi"
-                md:TextFieldAssist.TextFieldCornerRadius="13"
-                Background="#F5F5F5"
-                FontSize="16"
-                FontWeight="DemiBold"
-                Style="{StaticResource MaterialDesignTextBox}" />
+            <TextBox md:HintAssist.Hint="Nomi" BorderThickness="0"/>
 
-            <ComboBox
-                Width="320"
-                Height="56"
-                Margin="10,5"
-                Padding="10"
-                HorizontalAlignment="Left"
-                md:HintAssist.Hint="Chek o'lchami"
-                md:TextFieldAssist.TextFieldCornerRadius="13"
-                Background="#F5F5F5"
-                FontSize="16"
-                FontWeight="DemiBold">
+            <ComboBox md:HintAssist.Hint="Chek o'lchami" BorderThickness="0">
                 <ComboBoxItem Content="Asosiy printer" />
                 <ComboBoxItem Content="Keyingi printer" />
             </ComboBox>
 
-            <ComboBox
-                Width="320"
-                Height="56"
-                Margin="10,5"
-                Padding="10"
-                HorizontalAlignment="Left"
-                md:HintAssist.Hint="Interfeys"
-                md:TextFieldAssist.TextFieldCornerRadius="13"
-                Background="#F5F5F5"
-                FontSize="16"
-                FontWeight="DemiBold">
-
+            <ComboBox md:HintAssist.Hint="Interfeys" BorderThickness="0">
                 <ComboBoxItem Content="Etherface" />
                 <ComboBoxItem Content="Noface" />
             </ComboBox>
 
-            <TextBox
-                Width="320"
-                Height="56"
-                Margin="10,5"
-                Padding="10"
-                HorizontalAlignment="Left"
-                VerticalContentAlignment="Center"
-                md:HintAssist.Hint="Printer IP adresi"
-                md:TextFieldAssist.TextFieldCornerRadius="13"
-                Background="#F5F5F5"
-                FontSize="16"
-                FontWeight="DemiBold"
-                Style="{StaticResource MaterialDesignTextBox}" />
+            <TextBox md:HintAssist.Hint="Printer IP adresi" BorderThickness="0" />
             <Grid>
-                <TextBlock
-                    Margin="10"
-                    FontSize="16"
-                    FontWeight="DemiBold"
-                    Text="Cheklarni chop etish" />
-                <ToggleButton
-                    Margin="300,0"
-                    HorizontalAlignment="Left"
-                    md:ToggleButtonAssist.SwitchTrackOnBackground="#006AFF"
-                    IsChecked="True"
-                    Style="{StaticResource MaterialDesignSwitchLightToggleButton}"
-                    ToolTip="MaterialDesignSwitchLightToggleButton" />
+                <TextBlock Text="Cheklarni chop etish" />
+                <ToggleButton />
             </Grid>
             <Grid>
-                <TextBlock
-                    Margin="10"
-                    FontSize="16"
-                    FontWeight="DemiBold"
-                    Text="Avtomatik cheklarni chop etish" />
-                <ToggleButton
-                    Margin="300,0"
-                    HorizontalAlignment="Left"
-                    md:ToggleButtonAssist.SwitchTrackOnBackground="#006AFF"
-                    IsChecked="True"
-                    Style="{StaticResource MaterialDesignSwitchLightToggleButton}"
-                    ToolTip="MaterialDesignSwitchLightToggleButton" />
+                <TextBlock Text="Avtomatik cheklarni chop etish" />
+                <ToggleButton />
             </Grid>
         </StackPanel>
     </Border>
