--- a/BitoDesktop.WPF/Pages/Settings/SaleInfoSettings.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/SaleInfoSettings.xaml
@@ -23,6 +23,7 @@
             <Setter Property="md:ButtonAssist.CornerRadius" Value="10" />
             <Setter Property="Background" Value="#F5F5F5" />
             <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Margin" Value="5" />
             <Setter Property="FontWeight" Value="DemiBold" />
             <Setter Property="md:ElevationAssist.Elevation" Value="Dp0" />
             <Setter Property="Foreground" Value="Black" />
@@ -52,16 +53,52 @@
                     Foreground="#006AFF"
                     Text="#12345678" />
                 <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                    <Button Content="Chop etish" />
-                    <Button Content="Yuklab olish" />
-                    <Button Content="Qaytarish" />
+                    <Button>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Qaytarish" />
+                            <md:PackIcon
+                                Width="24"
+                                Height="24"
+                                VerticalAlignment="Center"
+                                Foreground="#006AFF"
+                                Kind="Printer" />
+                            <md:PackIcon
+                                Width="24"
+                                Height="24"
+                                VerticalAlignment="Center"
+                                Foreground="#006AFF"
+                                Kind="Printer" />
+                        </StackPanel>
+                    </Button>
+                    <Button>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Yuklab olish" />
+                            <md:PackIcon
+                                Width="24"
+                                Height="24"
+                                VerticalAlignment="Center"
+                                Foreground="#006AFF"
+                                Kind="Download" />
+                        </StackPanel>
+                    </Button>
+                    <Button>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Chop etish" />
+                            <md:PackIcon
+                                Width="24"
+                                Height="24"
+                                VerticalAlignment="Center"
+                                Foreground="#006AFF"
+                                Kind="Printer" />
+                        </StackPanel>
+                    </Button>
                 </StackPanel>
 
             </Grid>
             <StackPanel Margin="0,10">
-                <TextBlock Text="Kassir:" Foreground="Black"/>
-                <TextBlock Text="Sana:" Foreground="Black"/>
-                <TextBlock Text="Umumiy savdo:" Foreground="Black"/>
+                <TextBlock Foreground="Black" Text="Kassir:" />
+                <TextBlock Foreground="Black" Text="Sana:" />
+                <TextBlock Foreground="Black" Text="Umumiy savdo:" />
             </StackPanel>
 
             <Grid>
