--- a/BitoDesktop.WPF/Pages/Settings/SaleInfoSettings.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/SaleInfoSettings.xaml
@@ -18,7 +18,7 @@
             <Setter Property="CornerRadius" Value="10" />
         </Style>
         <Style BasedOn="{StaticResource MaterialDesignRaisedButton}" TargetType="Button">
-            <Setter Property="Width" Value="140" />
+            <Setter Property="Width" Value="160" />
             <Setter Property="Height" Value="48" />
             <Setter Property="md:ButtonAssist.CornerRadius" Value="10" />
             <Setter Property="Background" Value="#F5F5F5" />
@@ -61,13 +61,7 @@
                                 Height="24"
                                 VerticalAlignment="Center"
                                 Foreground="#006AFF"
-                                Kind="Printer" />
-                            <md:PackIcon
-                                Width="24"
-                                Height="24"
-                                VerticalAlignment="Center"
-                                Foreground="#006AFF"
-                                Kind="Printer" />
+                                Kind="ArrowULeftBottom" />
                         </StackPanel>
                     </Button>
                     <Button>
