--- a/BitoDesktop.WPF/Pages/Pos/InstallmentPay.xaml
+++ b/BitoDesktop.WPF/Pages/Pos/InstallmentPay.xaml
@@ -7,8 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
     Title="InstallmentPay"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    MinHeight="450"
+    MinWidth="540"
     Background="{StaticResource AttentionToActionBrush}"
     mc:Ignorable="d">
     <Border
