--- a/BitoDesktop.WPF/Pages/Settings/LogOutSettings.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/LogOutSettings.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BitoDesktop.WPF.Pages.Settings"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      MinHeight="450" MinWidth="540"
       Title="LogOutSettings">
 
     <Grid>
