--- a/BitoDesktop.WPF/Pages/Settings/PINkodSettings.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/PINkodSettings.xaml
@@ -7,14 +7,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
     Title="PINkodSettings"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    MinWidth="540"
+    MinHeight="450"
     mc:Ignorable="d">
 
     <Page.Resources>
-        <Style x:Key="CustomBorder" TargetType="Border">
+        <Style TargetType="Border">
             <Setter Property="Background" Value="White" />
-            <Setter Property="Margin" Value="10" />
+            <Setter Property="Margin" Value="5" />
             <Setter Property="CornerRadius" Value="10" />
         </Style>
         <Style BasedOn="{StaticResource MaterialDesignOutlinedPasswordBox}" TargetType="PasswordBox">
@@ -30,7 +30,7 @@
         </Style>
     </Page.Resources>
 
-    <Border Style="{StaticResource CustomBorder}">
+    <Border>
         <Grid>
 
             <StackPanel>
