--- a/BitoDesktop.WPF/Pages/Settings/PrinterSettings.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/PrinterSettings.xaml
@@ -7,17 +7,17 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
     Title="PrinterSettings"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    MinWidth="540"
+    MinHeight="450"
     mc:Ignorable="d">
     <Page.Resources>
-        <Style x:Key="CustomBorder" TargetType="Border">
+        <Style TargetType="Border">
             <Setter Property="Background" Value="White" />
-            <Setter Property="Margin" Value="10" />
+            <Setter Property="Margin" Value="5" />
             <Setter Property="CornerRadius" Value="10" />
         </Style>
     </Page.Resources>
-    <Border Style="{StaticResource CustomBorder}">
+    <Border>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="110" />
@@ -73,7 +73,7 @@
                 HorizontalScrollBarVisibility="Disabled"
                 VerticalScrollBarVisibility="Auto">
                 <ItemsControl />
-                
+
             </ScrollViewer>
         </Grid>
     </Border>
